# Strang-splitting

./: .gitignore  CMakeLists.txt  README.md  example_output.hdf5  hdf5_unit_tests.cpp  hdf5writer.hpp  simulator.cpp  strang.cpp  strang.hpp  types.hpp  unit_tests.cpp  util.cpp  util.hpp
cmake/: FindFFTW.cmake
